# DiscordBot

./: .gitignore  Commands.py  Database.py  LICENSE  README.md  TestCommands.py  TestOterlu.py  TestUserAccount.py  coins.json  config.py  database.py  inv.json  main.py  mainslashcmd.py  not_allowed_words.py  pyproject.toml  thread_testing.py  user.py  userdb.json
old/: not_allowed_words.py  oldupdatedmain.py
old/tests/: TestJokesAPI.py  TestOterlu.py  TestUserDb.py  inv.json
